<resources>
    <string name="app_name">EmprendeYa</string>
    <string name="signature">Certification 2020</string>

    <!-- Global -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Login screen -->
    <string name="login">Enter with your account...</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="go">Go!</string>
    <string name="logout">Logout</string>

    <!-- Errors-->
    <string name="error_fill_values">Please fill all the values</string>
    <string name="error_no_connection">Please review your internet connection</string>
    <string name="error_incorrect_login">Email or Password incorrect</string>
    <string name="error_valid_email">Please enter a valid email</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_register">Error register User</string>
    <string name="error_register_email_already_exist">Email is already registered</string>
    <string name="error_login_google">Please review your google credentials</string>

    <!-- Startup Details -->
    <string name="title_activity_startup_details">StartupDetailsActivity</string>
    <string name="tab_info">Info</string>
    <string name="tab_posts">Posts</string>

    <!-- Startup details fragment -->
    <string name="covid_details">COVID-19 Info</string>

    <!-- Create post Activity -->
    <string name="post_title">Post title</string>
    <string name="post_content">Post content</string>
    <string name="post_image">Pick image</string>

    <!-- Register Activity -->
    <string name="register_name">Enter name</string>
    <string name="register_email">Enter email</string>
    <string name="register_password">Enter password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_profile_pic">Select profile Pic</string>
</resources>